--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,34 @@
-html{
-    scroll-behavior: smooth;
+/* PROPIEDADES GENERALES */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
 body{
-    margin: 0;
-    padding: 0;
+    background-color: #fff; 
+    min-height: 100vh;
+    overflow-x: hidden; 
+    background: linear-gradient(0deg, rgba(207,224,255,1) 0%, rgba(130,127,209,1) 100%);
+}
+
+header{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 30px 80px 30px 50px;
+    display: flex;
+    object-fit: cover;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 2000;
+}
+
+header .logo{
+    width: 15vmax;
+    cursor: pointer;
 }
 
 .navbar {
@@ -43,4 +67,102 @@ body{
   
 .navbar-toggler:focus {
     outline: none;
+}
+
+section{
+    position: relative;
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    overflow: hidden;
+}
+
+/*section::before{
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 150px;
+    background: linear-gradient(to bottom, #055a84, transparent);
+    z-index: 10;
+}*/
+
+section img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+    pointer-events: none;
+}
+
+.color_fondo{
+    width: 100%;
+    height: 100vh;
+    background: #00339236;
+}
+
+section #slogan{
+    position: absolute;
+    color: #ffffff;
+    font-size: 4vmax;
+    text-align: center;
+    font-family: 'Rancho', sans-serif;
+    line-height: 0.8em;
+    white-space: nowrap;
+    transform: translateY(-100px);
+      
+}
+
+section #btn{
+    position: absolute;
+    text-decoration: none;
+    display: inline-block;
+    padding: 8px 30px;
+    color: #fff;
+    text-align: center;
+    font-size: 1.2em;
+    font-weight: 500;
+    letter-spacing: 2px;
+    background: #e49116;
+    border-radius: 20px; 
+    transform: translateY(20px); 
+    
+}
+section #btn:hover{
+    background: #ad6f10;
+}
+
+.sec{
+    background: #d6d6d6;
+    position: relative;
+    padding: 80px;
+}
+
+.sec h2{
+    font-size: 3.5vw;
+    color: #fff;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+}
+
+.sec h3{
+    font-size: 2vw;
+    color: #fff;
+    margin-bottom: 10px;
+}
+
+.sec p{
+    font-size: 1.2em;
+    color: #fff;
+}
+
+/* AHORA HAREMOS EL RESPONSIVO */
+@media (max-width: 991px){
+    
 }
